# bittorrent-client-py

./: .gitignore  README.md  pyproject.toml
scripts/: check  format  test
src/: __init__.py  bencoding.py  client.py  main.py  messages.py  peers.py  pieces.py  torrent.py  trackers.py  workers.py
