[tool.poetry]
name = "bittorrent-py"
version = "0.1.0"
description = ""
authors = ["pegov <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.17.1"
bitarray = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"
isort = "^5.8.0"
autoflake = "^1.4"
black = "^20.8b1"
mypy = "^0.812"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
